@@ -1,4 +1,4 @@
-# include   <stdio.h>
+# include   <stdio.h> 
 # include   <string.h>
 # include   <stdlib.h>
 # include   <math.h>
@@ -142,6 +142,9 @@ Code Outline:
                             for BIAS and DARK images.  Bad pixels (BPIXTAB flag of 4) 
                             are ignored during the combination process for the 
                             SCI and ERR arrays (i.e. treat bad pixels as normal pixels).
+  18-Jan-2022   M.D. DeLaPena Modified the computation of the output ERR image so
+                            the output in the CRJ file is propagated from the input
+                            ERR images, using only non-CR pixels (Git Issue#371).
 */
 int acsrej_loop (IODescPtr ipsci[], IODescPtr iperr[], IODescPtr ipdq[],
                  char imgname[][CHAR_FNAME_LENGTH], int grp [], int nimgs,
@@ -182,7 +185,7 @@ int acsrej_loop (IODescPtr ipsci[], IODescPtr iperr[], IODescPtr ipdq[],
                   comparison during CR rejection.
                   As output, it is the average image also in e/s,
                   recalculated from good pixels only.
-      avevar   o: ERR array in e/s, recalculated from good pixels only.
+      avevar   o: ERR array in e, recalculated from good pixels only.
       efacsum  o: Array of total exposure times, in seconds, for each of
                   the pixels. This is calculated from the number of good
                   pixels left for that location after CR rejection.
@@ -209,6 +212,7 @@ int acsrej_loop (IODescPtr ipsci[], IODescPtr iperr[], IODescPtr ipdq[],
     short   maskdq;
 
     float   efacn, skyvaln;
+    float   exptot;				/* Total exposure time of all images from TEXPTIME and EXPTIME */
     int     readnoise_only;
 
     ShortTwoDArray dq2;         /* local array for storing output blv DQ vals */
@@ -218,10 +222,13 @@ int acsrej_loop (IODescPtr ipsci[], IODescPtr iperr[], IODescPtr ipdq[],
     float   ***thresh, ***spthresh;
     short   ***mask;
 
+    float   ***scroll_buferr;
+
     float   *sum;
     float   *sumvar;
     float   *buf, *buferr;
     short   *bufdq;
+    float   *err2;
 
     Byte    ***crmask;          /* Compressed CR HIT mask for all images */
 
@@ -310,12 +317,18 @@ int acsrej_loop (IODescPtr ipsci[], IODescPtr iperr[], IODescPtr ipdq[],
         trlerror ("Couldn't allocate memory for scratch array in ACSREJ_LOOP.");
         return (status = OUT_OF_MEMORY);
     }
-
+    scroll_buferr= (float ***) calloc (nimgs, sizeof(float **));
+    if (scroll_buferr== NULL) {
+        trlerror ("Couldn't allocate memory for scratch array in ACSREJ_LOOP.");
+        return (status = OUT_OF_MEMORY);
+    }
     for (k = 0; k < nimgs; k++) {
         mask[k] = allocShortBuff (buffheight, dim_x);
         pic[k] = allocFloatBuff(buffheight, dim_x);
         thresh[k] = allocFloatBuff (buffheight, dim_x);
         spthresh[k] = allocFloatBuff (buffheight, dim_x);
+
+        scroll_buferr[k] = allocFloatBuff (buffheight, dim_x);
     }
 
     zerofbuf = calloc (dim_x, sizeof(float));
@@ -327,6 +340,8 @@ int acsrej_loop (IODescPtr ipsci[], IODescPtr iperr[], IODescPtr ipdq[],
     buf = calloc (dim_x, sizeof(float));
     buferr = calloc (dim_x, sizeof(float));
     bufdq = calloc (dim_x, sizeof(short));
+
+    err2 = calloc(dim_x, sizeof(float));
 
     /*
        If we want to perform SHADCORR here, ...
@@ -413,8 +428,10 @@ int acsrej_loop (IODescPtr ipsci[], IODescPtr iperr[], IODescPtr ipdq[],
         rog2[k] = SQ(noise.val[k]);  /* e^2, copied to noise2 below */
     }
 
+    exptot = 0.0;
     for (n = 0; n < nimgs; n++) {
         exp2[n] = SQ(efac[n]);  /* s^2 */
+        exptot += efac[n];
     }
 
     /* Set up gain and values used for each image */
@@ -448,6 +465,8 @@ int acsrej_loop (IODescPtr ipsci[], IODescPtr iperr[], IODescPtr ipdq[],
                     memcpy (pic[k][j], zerofbuf, dim_x * sizeof(float));
                     memcpy (thresh[k][j], zerofbuf, dim_x * sizeof(float));
                     memcpy (spthresh[k][j], zerofbuf, dim_x * sizeof(float));
+
+                    memcpy (scroll_buferr[k][j], zerofbuf, dim_x * sizeof(float));
                 }
             }
         } /* End initialization section */
@@ -458,6 +477,7 @@ int acsrej_loop (IODescPtr ipsci[], IODescPtr iperr[], IODescPtr ipdq[],
             /* Zero out this buffer for the next line */
             memcpy (sum, zerofbuf, dim_x * sizeof(float));
             memcpy (sumvar, zerofbuf, dim_x * sizeof(float));
+            memcpy (err2, zerofbuf, dim_x * sizeof(float));
 
             /* Set up the gain and noise values used for this line in
                ALL images */
@@ -528,6 +548,9 @@ int acsrej_loop (IODescPtr ipsci[], IODescPtr iperr[], IODescPtr ipdq[],
                     scrollFloatBuff (buferr, line, dim_y, buffheight, dim_x,
                                      spthresh[k], zerofbuf);
 
+                    scrollFloatBuff (buferr, line, dim_y, buffheight, dim_x,
+                                     scroll_buferr[k], zerofbuf);
+
                     /* Recalculate thresholds properly. Only the last inserted
                        row of the scrolling buffer needs to be recalculated.
 
@@ -554,6 +577,8 @@ int acsrej_loop (IODescPtr ipsci[], IODescPtr iperr[], IODescPtr ipdq[],
                        Leave thresholds as zeroes. */
                     InitFloatSect (pic[k], buf, ipsci[k], line, width, dim_x);
                     InitShortSect (mask[k], bufdq, ipdq[k], line, width, dim_x);
+
+                    InitFloatSect (scroll_buferr[k], buferr, iperr[k], line, width, dim_x);
 
                     /* No data when (ii < width), just zeroes */
                     for (ii = width; ii < buffheight; ii++) {
@@ -737,6 +762,10 @@ int acsrej_loop (IODescPtr ipsci[], IODescPtr iperr[], IODescPtr ipdq[],
                             /* add the sky-subtracted but UN-scaled counts */
                             sum[i] += pic[n][width][i] * efacn;  /* e */
                             PIX(efacsum, i, line, dim_x) += efacn;  /* s */
+
+                            /* add the error contributions from each image for a pixel which is not rejected 
+                             * err2 is in e^2 */
+                            err2[i] += SQ(scroll_buferr[n][width][i]);
                         }
                     }
 
@@ -769,6 +798,7 @@ int acsrej_loop (IODescPtr ipsci[], IODescPtr iperr[], IODescPtr ipdq[],
                                     sumvar[i] += nse[0];
                                 }
                             }
+
                         } /* End of loop over first amp used for line */
 
                         /* SECOND AMP */
@@ -795,6 +825,8 @@ int acsrej_loop (IODescPtr ipsci[], IODescPtr iperr[], IODescPtr ipdq[],
                            }
                         } /* End of loop over second amp used for line */
 
+                        /* If pixels are not marked as rejected, then use the 
+                        exposure and error data for the output error computation */
                         for (i = 0; i < dim_x; i++) {
                             /* output DQF is just the logical OR of all
                               (original) input DQF */
@@ -858,7 +890,7 @@ int acsrej_loop (IODescPtr ipsci[], IODescPtr iperr[], IODescPtr ipdq[],
 
             /* BOTH AMPS */
             for (i = 0; i < dim_x; i++) {
-                /* Total EXPTIME (in seconds) of from images where this pixel
+                /* Total EXPTIME (in seconds) from images where this pixel
                    is not flagged as CR. */
                 pixexp = PIX(efacsum, i, line, dim_x);
 
@@ -872,10 +904,10 @@ int acsrej_loop (IODescPtr ipsci[], IODescPtr iperr[], IODescPtr ipdq[],
 
                     /* For final iter, convert variance to error.
                        sumvar is e^2
-                       avevar is e/s; goes to ERR
+                       avevar is e; goes to ERR
                     */
                     if (iter == (niter - 1)) {
-                        PPix(avevar, i, line) = sqrt(sumvar[i]) / pixexp;
+                        PPix(avevar, i, line) = (exptot / pixexp) * sqrt(err2[i]);
                     }
                 } else {
                     if (iter == (niter - 1)) {
@@ -942,18 +974,21 @@ int acsrej_loop (IODescPtr ipsci[], IODescPtr iperr[], IODescPtr ipdq[],
     free (sumvar);
     free (zerofbuf);
     free (zerosbuf);
+    free (err2);
 
     for (k = 0; k < nimgs; k++) {
         freeFloatBuff (pic[k], buffheight);
         freeFloatBuff (thresh[k], buffheight);
         freeFloatBuff (spthresh[k], buffheight);
         freeShortBuff (mask[k], buffheight);
+        freeFloatBuff (scroll_buferr[k], buffheight);
     }
 
     free (mask);
     free (pic);
     free (thresh);
     free (spthresh);
+    free (scroll_buferr);
     free (buf);
     free (buferr);
     free (bufdq);
